# monorepo

./: BUILD  MODULE.bazel
bazel/: auto_factory.bzl
java/io/jackbradshaw/klu/concurrency/: BUILD
java/io/jackbradshaw/klu/flow/: BUILD
java/io/jackbradshaw/kmonkey/coroutines/: BUILD
java/io/jackbradshaw/otter/: BUILD
java/io/jackbradshaw/otter/config/: BUILD
java/io/jackbradshaw/otter/coroutines/: BUILD
java/io/jackbradshaw/otter/demo/: BUILD
java/io/jackbradshaw/otter/demo/items/: BUILD
java/io/jackbradshaw/otter/demo/materials/: BUILD
java/io/jackbradshaw/otter/demo/support/: BUILD
java/io/jackbradshaw/otter/engine/core/: BUILD
java/io/jackbradshaw/otter/graphics/model/: BUILD
java/io/jackbradshaw/otter/math/interpolators/: BUILD
java/io/jackbradshaw/otter/math/model/: BUILD
java/io/jackbradshaw/otter/openxr/config/: BUILD
java/io/jackbradshaw/otter/openxr/events/: BUILD
java/io/jackbradshaw/otter/openxr/manifest/encoder/: BUILD
java/io/jackbradshaw/otter/openxr/manifest/generator/: BUILD
java/io/jackbradshaw/otter/openxr/manifest/installer/: BUILD
java/io/jackbradshaw/otter/openxr/model/: BUILD
java/io/jackbradshaw/otter/physics/collisions/: BUILD
java/io/jackbradshaw/otter/physics/model/: BUILD
java/io/jackbradshaw/otter/qualifiers/: BUILD
java/io/jackbradshaw/otter/restoration/: BUILD
java/io/jackbradshaw/otter/scene/item/: BUILD
java/io/jackbradshaw/otter/scene/primitive/: BUILD
java/io/jackbradshaw/otter/scene/stage/: BUILD
java/io/jackbradshaw/otter/timing/: BUILD
javatests/io/jackbradshaw/klu/concurrency/: BUILD
javatests/io/jackbradshaw/klu/flow/: BUILD
javatests/io/jackbradshaw/kmonkey/coroutines/: BUILD
javatests/io/jackbradshaw/otter/openxr/config/: BUILD
javatests/io/jackbradshaw/otter/openxr/manifest/encoder/: BUILD
javatests/io/jackbradshaw/otter/openxr/manifest/generator/: BUILD
javatests/io/jackbradshaw/otter/openxr/manifest/goldens/: BUILD
javatests/io/jackbradshaw/otter/openxr/manifest/installer/: BUILD
javatests/io/jackbradshaw/otter/openxr/standard/: BUILD
shell/: setup_local.sh  setup_session.sh
